xml switch. More armor outfits stuff